--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ cryptography==41.0.3
 django==4.2.4
 et-xmlfile==1.1.0
 frozenlist==1.4.0
+gunicorn==20.0.4
 idna==3.4
 msal==1.23.0
 msal-extensions==1.0.0
